--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
+    "mongoose": "^9.0.1",
     "nodemon": "^3.1.11"
   }
 }
