--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "debug": "^4.4.3",
     "express": "^5.2.1",
+    "express-cors": "^0.0.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "nodemon": "^3.1.11",
